@@ -34,10 +34,10 @@
 // Set to a value greather than 0, to dump parent node chain while parsing
 #define DUMP_PARENT_STACK 0
 
-GeoParser::GeoParser(GeoDataGenericSourceType source)
-    : QXmlStreamReader()
-    , m_document(0)
-    , m_source(source)
+GeoParser::GeoParser( GeoDataGenericSourceType source )
+    : QXmlStreamReader(),
+      m_document( 0 ),
+      m_source( source )
 {
 }
 
@@ -46,75 +46,75 @@ GeoParser::~GeoParser()
 }
 
 #if DUMP_PARENT_STACK > 0
-static void dumpParentStack(const QString& name, int size, bool close)
+static void dumpParentStack( const QString& name, int size, bool close )
 {
     static int depth = 0;
 
-    if (!close)
+    if ( !close )
         depth++;
 
     QString result;
-    for (int i = 0; i < depth; ++i)
+    for ( int i = 0; i < depth; ++i )
         result += ' ';
 
-    if (close) {
+    if ( close ) {
         depth--;
         result += "</";
     } else
         result += '<';
 
-    result += name + "> stack size " + QString::number(size);
-    fprintf(stderr, "%s\n", qPrintable(result));
+    result += name + "> stack size " + QString::number( size );
+    fprintf( stderr, "%s\n", qPrintable( result ));
 }
 #endif
 
-bool GeoParser::read(QIODevice* device)
+bool GeoParser::read( QIODevice* device )
 {
     // Assert previous document got released.
-    Q_ASSERT(!m_document);
+    Q_ASSERT( !m_document );
     m_document = createDocument();
-    Q_ASSERT(m_document);
+    Q_ASSERT( m_document );
 
     // Set data source
-    setDevice(device);
+    setDevice( device );
 
     // Start parsing
-    while (!atEnd()) {
+    while ( !atEnd() ) {
         readNext();
 
-        if (isStartElement()) {
-            if (isValidDocumentElement()) {
+        if ( isStartElement() ) {
+            if ( isValidDocumentElement() ) {
 #if DUMP_PARENT_STACK > 0
-                dumpParentStack(name().toString(), m_nodeStack.size(), false);
+                dumpParentStack( name().toString(), m_nodeStack.size(), false );
 #endif
  
                 parseDocument();
 
-                if (!m_nodeStack.isEmpty())
+                if ( !m_nodeStack.isEmpty() )
                     raiseError(
                         QObject::tr("Parsing failed. Still %1 unclosed tags after document end.")
-                        .arg(m_nodeStack.size()));
+                        .arg( m_nodeStack.size() ));
             } else
                 raiseDocumentElementError();
         }
     }
 
-    if (error())
+    if ( error() )
         qDebug() << "[GeoParser::read] -> Error occurred:" << errorString();
 
     return !error();
 }
 
-bool GeoParser::isValidElement(const QString& tagName) const
+bool GeoParser::isValidElement( const QString& tagName ) const
 {
     return name() == tagName;
 }
 
-GeoStackItem GeoParser::parentElement(unsigned int depth)
+GeoStackItem GeoParser::parentElement( unsigned int depth )
 {
     QStack<GeoStackItem>::const_iterator it = m_nodeStack.constEnd() - 1;
 
-    if (it - depth < m_nodeStack.constBegin())
+    if ( it - depth < m_nodeStack.constBegin() )
         return GeoStackItem();
 
     return *(it - depth);
@@ -122,28 +122,28 @@ GeoStackItem GeoParser::parentElement(unsigned int depth)
 
 void GeoParser::parseDocument()
 {
-    Q_ASSERT(isStartElement());
+    Q_ASSERT( isStartElement() );
 
-    while (!atEnd()) {
+    while ( !atEnd() ) {
         readNext();
-        GeoTagHandler::QualifiedName qName(name().toString(), namespaceUri().toString());
-
-        if (isEndElement()) {
-            if (!isValidDocumentElement())
+        GeoTagHandler::QualifiedName qName( name().toString(),
+                                            namespaceUri().toString() );
+        if ( isEndElement() ) {
+            if ( !isValidDocumentElement() )
                 m_nodeStack.pop();
 
 #if DUMP_PARENT_STACK > 0
-            dumpParentStack(name().toString(), m_nodeStack.size(), true);
+            dumpParentStack( name().toString(), m_nodeStack.size(), true );
 #endif
             break;
         }
 
-        if (isStartElement()) {
+        if ( isStartElement() ) {
             bool processChildren = true;
-            GeoStackItem stackItem(qName, 0);
+            GeoStackItem stackItem( qName, 0 );
 
-            if (const GeoTagHandler* handler = GeoTagHandler::recognizes(qName)) {
-                stackItem.assignNode(handler->parse(*this));
+            if ( const GeoTagHandler* handler = GeoTagHandler::recognizes( qName )) {
+                stackItem.assignNode( handler->parse( *this ));
                 processChildren = !isEndElement();
             }
 
@@ -155,11 +155,11 @@ void GeoParser::parseDocument()
             // readElementText(). This implicates that tags like <name>
             // don't contain any children that would need to be procesed using
             // this parseDocument() function.
-            if (processChildren) {
-                m_nodeStack.push(stackItem);
+            if ( processChildren ) {
+                m_nodeStack.push( stackItem );
 
 #if DUMP_PARENT_STACK > 0
-                dumpParentStack(name().toString(), m_nodeStack.size(), false);
+                dumpParentStack( name().toString(), m_nodeStack.size(), false );
 #endif
 
                 parseDocument();
@@ -167,11 +167,11 @@ void GeoParser::parseDocument()
 #if DUMP_PARENT_STACK > 0
             else {
                 // This is only used for debugging purposes.
-                m_nodeStack.push(stackItem);
-                dumpParentStack(name().toString(), m_nodeStack.size(), false);
+                m_nodeStack.push( stackItem );
+                dumpParentStack( name().toString(), m_nodeStack.size(), false );
 
                 m_nodeStack.pop();
-                dumpParentStack(name().toString(), m_nodeStack.size(), true);
+                dumpParentStack( name().toString(), m_nodeStack.size(), true );
             }
 #endif
         }
@@ -180,19 +180,19 @@ void GeoParser::parseDocument()
 
 void GeoParser::raiseDocumentElementError()
 {
-    raiseError(QObject::tr("File format unrecognized"));
+    raiseError( QObject::tr( "File format unrecognized" ));
 }
 
-void GeoParser::raiseWarning(const QString& warning)
+void GeoParser::raiseWarning( const QString& warning )
 {
     // TODO: Maybe introduce a strict parsing mode where we feed the warning to
     // raiseError() (which stops parsing).
     qDebug() << "[GeoParser::raiseWarning] -> " << warning;
 }
 
-QString GeoParser::attribute(const char* attributeName) const
+QString GeoParser::attribute( const char* attributeName ) const
 {
-    return attributes().value(QString::fromLatin1(attributeName)).toString();
+    return attributes().value( QString::fromLatin1( attributeName )).toString();
 }
 
 GeoDocument* GeoParser::releaseDocument()
